its working now

--- a/working2/frontend/index.html
+++ b/working2/frontend/index.html
@@ -3,92 +3,19 @@
 <head>
     <title>Jesus Dude Just Bootstrap It</title>
     <meta charset="utf-8">
+    <style>
+        .hasface{
+            background-color: green;
+        }
+    </style>
 </head>
 <body>
-<h2>2018-11-03 15:13:55: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272435.mp4" type="video/mp4">
+<h2>2018-11-03 16:44:50: </h2><div class=hasface><video loop width="640" height="480" controls>
+  <source src="videos/1541277890.mp4" type="video/mp4">
   Your browser does not support the video tag.
-</video><h2>2018-11-03 15:14:03: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272443.mp4" type="video/mp4">
+</video></div><h2>2018-11-03 16:45:08: </h2><div class=hasface><video loop width="640" height="480" controls>
+  <source src="videos/1541277908.mp4" type="video/mp4">
   Your browser does not support the video tag.
-</video><h2>2018-11-03 15:14:09: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272449.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:14:15: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272455.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:14:20: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272460.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:14:26: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272466.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:14:31: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272471.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:14:37: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272477.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:14:42: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272482.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:14:47: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272487.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:14:53: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272493.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:14:58: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272498.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:15:03: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272503.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:15:09: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272509.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:15:15: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272515.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:15:23: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272523.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:15:30: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272530.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:15:36: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272536.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:15:42: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272542.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:15:48: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272548.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:15:53: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272553.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:15:59: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272559.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:16:04: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272564.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:16:10: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272570.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:16:15: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272575.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:16:21: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272581.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:16:26: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272586.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><h2>2018-11-03 15:16:31: </h2><video loop width="640" height="480" controls>
-  <source src="videos/1541272591.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+</video></div>
 </body>
 </html>
