--- a/working2/frontend/template.html
+++ b/working2/frontend/template.html
@@ -3,6 +3,11 @@
 <head>
     <title>Jesus Dude Just Bootstrap It</title>
     <meta charset="utf-8">
+    <style>
+        .hasface{
+            background-color: green;
+        }
+    </style>
 </head>
 <body>
 BODY
